src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body, #root {
    @apply scrollbar-thin antialiased;
  }
}

@layer utilities {
  .group:hover .group-hover\:block {
    display: block;
    text-decoration: underline;
  }

  .hero-gradient {
    background-image: linear-gradient(270deg, #7CEFE1 33.85%, #8FF1E5 33.85%, #FFFFFF 83.13%);
  }

  .scrollbar-thin {
    scrollbar-width: thin;

    &:hover {
      --fix: ; /* This custom property invalidates styles on hover, thereby enforcing a style recomputation. This is needed to work around a bug in Safari. */
    }
    
    @supports selector(::-webkit-scrollbar) {
      &::-webkit-scrollbar,
      &::-webkit-scrollbar-track,
      &::-webkit-scrollbar-track:hover,
      &::-webkit-scrollbar-corner,
      &::-webkit-scrollbar:horizontal {
        @apply bg-transparent;
      }
      &::-webkit-scrollbar {
        @apply h-2 w-2;
      }
      &::-webkit-scrollbar:horizontal {
        @apply h-2;
      }
      &::-webkit-scrollbar-thumb,
      &::-webkit-scrollbar-thumb:horizontal {
        @apply bg-neutral-700 rounded-lg border-2 border-solid border-transparent;
      }
      &::-webkit-scrollbar-thumb:hover {
        @apply bg-neutral-600 border-2 border-solid border-transparent;
      }
      &::-webkit-scrollbar-button {
        @apply hidden;
      }
      &::-webkit-resizer {
        @apply bg-transparent;
      }
    }
   
  }
}

